<resources>
    <string name="app_name">Calculator</string>
    <string name="button_sin">sin</string>
    <string name="button_cos">cos</string>
    <string name="button_sqrt">sqrt</string>
    <string name="button_pi">pi</string>
    <string name="button_e">e</string>
    <string name="button_left_parenthesis">(</string>
    <string name="button_right_parenthesis">)</string>
    <string name="button_C">C</string>
    <string name="button_division">/</string>
    <string name="button_multiple">*</string>
    <string name="button_minus">-</string>
    <string name="button_plus">+</string>
    <string name="buttton_equal">=</string>
    <string name="button_dot">.</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_0">0</string>
</resources>
