<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.percent.PercentRelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".MainActivity"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <Button
            android:id="@+id/button00"
            app:layout_widthPercent="25%"
            app:layout_heightPercent="20%"
            android:text="@string/button_left_parenthesis"
            android:onClick="buttonClicked"
            style="@style/button_midBlue"/>
        <Button
            android:id="@+id/button10"
            app:layout_widthPercent="25%"
            app:layout_heightPercent="20%"
            android:padding="0pt"
            android:text="@string/button_right_parenthesis"
            android:onClick="buttonClicked"
            style="@style/button_midBlue"
            android:layout_toRightOf="@+id/button00"/>
        <Button
            android:id="@+id/button20"
            app:layout_widthPercent="25%"
            app:layout_heightPercent="20%"
            android:text="@string/button_C"
            android:onClick="buttonClicked"
            style="@style/button_midBlue"
            android:layout_toRightOf="@+id/button10"/>
        <Button
            android:id="@+id/button30"
            app:layout_widthPercent="25%"
            app:layout_heightPercent="20%"
            android:text="@string/button_division"
            android:onClick="buttonClicked"
            style="@style/button_lightBlue"
            android:layout_toRightOf="@+id/button20"/>


        <Button
            android:id="@+id/button01"
            app:layout_widthPercent="25%"
            app:layout_heightPercent="20%"
            android:text="@string/button_7"
            android:onClick="buttonClicked"
            style="@style/button_darkBlue"
            android:layout_below="@+id/button00"/>
        <Button
            android:id="@+id/button11"
            app:layout_widthPercent="25%"
            app:layout_heightPercent="20%"
            android:padding="0pt"
            android:text="@string/button_8"
            android:onClick="buttonClicked"
            style="@style/button_darkBlue"
            android:layout_toRightOf="@+id/button01"
            android:layout_below="@+id/button00"/>
        <Button
            android:id="@+id/button21"
            app:layout_widthPercent="25%"
            app:layout_heightPercent="20%"
            android:text="@string/button_9"
            android:onClick="buttonClicked"
            style="@style/button_darkBlue"
            android:layout_toRightOf="@+id/button11"
            android:layout_below="@+id/button00"/>
        <Button
            android:id="@+id/button31"
            app:layout_widthPercent="25%"
            app:layout_heightPercent="20%"
            android:text="@string/button_multiple"
            android:onClick="buttonClicked"
            style="@style/button_lightBlue"
            android:layout_toRightOf="@+id/button21"
            android:layout_below="@+id/button00"/>


        <Button
            android:id="@+id/button02"
            app:layout_widthPercent="25%"
            app:layout_heightPercent="20%"
            android:text="@string/button_4"
            android:onClick="buttonClicked"
            style="@style/button_darkBlue"
            android:layout_below="@+id/button01"/>
        <Button
            android:id="@+id/button12"
            app:layout_widthPercent="25%"
            app:layout_heightPercent="20%"
            android:padding="0pt"
            android:text="@string/button_5"
            android:onClick="buttonClicked"
            style="@style/button_darkBlue"
            android:layout_toRightOf="@+id/button02"
            android:layout_below="@+id/button01"/>
        <Button
            android:id="@+id/button22"
            app:layout_widthPercent="25%"
            app:layout_heightPercent="20%"
            android:text="@string/button_6"
            android:onClick="buttonClicked"
            style="@style/button_darkBlue"
            android:layout_toRightOf="@+id/button12"
            android:layout_below="@+id/button01"/>
        <Button
            android:id="@+id/button32"
            app:layout_widthPercent="25%"
            app:layout_heightPercent="20%"
            android:text="@string/button_minus"
            android:onClick="buttonClicked"
            style="@style/button_lightBlue"
            android:layout_toRightOf="@+id/button22"
            android:layout_below="@+id/button01"/>


        <Button
            android:id="@+id/button03"
            app:layout_widthPercent="25%"
            app:layout_heightPercent="20%"
            android:text="@string/button_1"
            android:onClick="buttonClicked"
            style="@style/button_darkBlue"
            android:layout_below="@+id/button02"/>
        <Button
            android:id="@+id/button13"
            app:layout_widthPercent="25%"
            app:layout_heightPercent="20%"
            android:padding="0pt"
            android:text="@string/button_2"
            android:onClick="buttonClicked"
            style="@style/button_darkBlue"
            android:layout_toRightOf="@+id/button03"
            android:layout_below="@+id/button02"/>
        <Button
            android:id="@+id/button23"
            app:layout_widthPercent="25%"
            app:layout_heightPercent="20%"
            android:text="@string/button_3"
            android:onClick="buttonClicked"
            style="@style/button_darkBlue"
            android:layout_toRightOf="@+id/button13"
            android:layout_below="@+id/button02"/>


        <Button
            android:id="@+id/button04"
            app:layout_widthPercent="25%"
            app:layout_heightPercent="20%"
            android:text="@string/button_dot"
            android:onClick="buttonClicked"
            style="@style/button_darkBlue"
            android:layout_below="@+id/button03"/>
        <Button
            android:id="@+id/button14"
            app:layout_widthPercent="25%"
            app:layout_heightPercent="20%"
            android:text="@string/button_0"
            android:onClick="buttonClicked"
            style="@style/button_darkBlue"
            android:layout_toRightOf="@+id/button04"
            android:layout_below="@+id/button03"/>
        <Button
            android:id="@+id/button24"
            app:layout_widthPercent="25%"
            app:layout_heightPercent="20%"
            android:text="@string/buttton_equal"
            android:onClick="buttonClicked"
            style="@style/button_midBlue"
            android:layout_toRightOf="@+id/button14"
            android:layout_below="@+id/button03"/>


        <Button
            android:id="@+id/button33"
            app:layout_widthPercent="25%"
            app:layout_heightPercent="40%"
            android:text="@string/button_plus"
            android:onClick="buttonClicked"
            style="@style/button_lightBlue"
            android:layout_toRightOf="@+id/button23"
            android:layout_below="@id/button32"/>


    </android.support.percent.PercentRelativeLayout>
</RelativeLayout>